# 2DRetroMapTool

./: README.md  build_instruction.txt
.github/workflows/: continuous.yml
memo/: memo.txt
src/: CMakeLists.txt
src/gui/: fsgui3dapp.cpp  fsgui3dapp.h
src/gui/mappiecemenu/: mappiecemenu.cpp
src/kernel/: retromap_data.cpp
